--- a/SavingsTarget/SavingsTarget/wwwroot/index.html
+++ b/SavingsTarget/SavingsTarget/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>SavingsTarget</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="css/bootstrap/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="/Images/SavingsTarget_logo.jpeg" />
     <link href="SavingsTarget.styles.css" rel="stylesheet" />
